# VVA_ROS-AMR

./: .gitignore  20200524_Optimization_CliffDetector_LaserscanKinect.ods  20200620_CalculosSeleccionNuevosMotoresYDisenoHW.ods  20200725_TestsOfHARKAudioSourceLocation.ods  20200729_TestsOfSpeechRecognitionModels.ods  20201023_MapeoVelocidadVehiculo_ComandosMotor.ods  20201229_CostosVehiculoVigilanciaAutonomo.ods  README_VVA_v0.1-0.6.txt  README_VVA_v0.6.1-.txt
ConfiguracionOpenVPN/: Readme.txt  client.conf  server.conf
DeepSpeechModule/: run_DS_module_jnano.sh  run_DS_module_laptop.sh
Design/: 20200729_VVADesignDocument.odt  20200731_VVAVoiceInteractionDesign.drawio  20200807_3_VVANodeDependencies.drawio  20210624_VVA-062_DesignDocument.odt
EmailNotificationAndWatchdogScripts/: CrontabBackup_J-Nano_20201103.txt  CrontabBackup_RbPi_20200819.txt  WiFiWatchdog.sh  reportLowVoltageByEmail.sh  sendMyIPByEmail.sh
EstadisticasControlPIDYAcelerac/: 20200507_3_ControlPID_right_wheel_stats_Kp1_Ki01_Kd1.ods  (+14 more)
ROS-course/: repositorio
VVA_ws/src/vva_cliff_detector/: CHANGELOG.rst  CMakeLists.txt  package.xml
VVA_ws/src/vva_cliff_detector/cfg/: VVACliffDetector.cfg
VVA_ws/src/vva_cliff_detector/config/: cliff_detector_params.yaml  laserscan_kinect_params.yaml  laserscan_kinect_params_simulation.yaml
VVA_ws/src/vva_cliff_detector/include/vva_cliff_detector/: vva_cliff_detector.h  vva_cliff_detector_node.h
VVA_ws/src/vva_cliff_detector/launch/: vva_cliff_detector.launch
VVA_ws/src/vva_cliff_detector/src/: main.cpp  vva_cliff_detector.cpp  vva_cliff_detector_node.cpp
(+200 files in other folders)
